add deploy task

--- a/azure-pipelines/fiskaltrust.Launcher.yml
+++ b/azure-pipelines/fiskaltrust.Launcher.yml
@@ -7,9 +7,7 @@ trigger:
 
 
 stages:
-  - template: templates/build.yml
-
-  # - template: templates/test.yml
+  - template: templates/test.yml
 
   # - template: templates/deploy.yml
 
