--- a/azure-pipelines/templates/test.yml
+++ b/azure-pipelines/templates/test.yml
@@ -12,7 +12,7 @@ stages:
 
     - task: UseDotNet@2
       inputs:
-        version: '6.0.x'
+        version: 6.0.x
 
     - task: DotNetCoreCLI@2
       displayName: ${{ variables.Build.SourceBranch }}
