--- a/azure-pipelines/templates/deploy.yml
+++ b/azure-pipelines/templates/deploy.yml
@@ -48,7 +48,7 @@ stages:
       inputs:
         command: publish
         publishWebProjects: false
-        arguments: -o $(Build.ArtifactStagingDirectory)/drop-$(target)
+        arguments: -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target)
         modifyOutputPath: true
     
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
