--- a/azure-pipelines/templates/deploy.yml
+++ b/azure-pipelines/templates/deploy.yml
@@ -1,3 +1,8 @@
+parameters:
+- name: branch
+  type: string
+  default: $(Build.SourceBranch)
+
 stages:
 - stage: Deploy
   jobs:
@@ -29,10 +34,10 @@ stages:
         version: 6.0.x
 
     - task: DotNetCoreCLI@2
-      displayName: ${{ variables.Build.SourceBranch }}
+      displayName: ${{ parameters.branch }}
       inputs:
         command: restore
-        ${{ if startsWith(variables.Build.SourceBranch, 'refs/tags/v') }}: 
+        ${{ if startsWith(parameters.branch, 'refs/tags/v') }}: 
           vstsFeed: release
         ${{ else }}:
           vstsFeed: dev
