--- a/azure-pipelines/templates/deploy.yml
+++ b/azure-pipelines/templates/deploy.yml
@@ -29,32 +29,22 @@ stages:
         pathToVersionJson: version.json
         semverVersion: v1 # still needed?
 
-    - task: UseDotNet@2
+    - task: NuGetToolInstaller@1
       inputs:
-        version: 6.0.x
+        versionSpec: 5.x
 
-    - task: DotNetCoreCLI@2
-      displayName: ${{ parameters.branch }}
+    - task: NuGetAuthenticate@0
       inputs:
-        command: restore
-        ${{ if startsWith(parameters.branch, 'refs/tags/v') }}: 
-          vstsFeed: release
-        ${{ else }}:
-          vstsFeed: dev
+        nuGetServiceConnections: release-feed
 
-    - task: DotNetCoreCLI@2
+    - pwsh: dotnet restore
+      displayName: Restore
+
+    - pwsh: dotnet build -c release
       displayName: Build
-      inputs:
-        command: build
-        arguments: -c release
 
-    - task: DotNetCoreCLI@2
+    - pwsh: dotnet build -c release -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0
       displayName: Publish
-      inputs:
-        command: publish
-        publishWebProjects: false
-        arguments: -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0
-        modifyOutputPath: true
-    
+
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
       artifact: drop-$(target)
