--- a/azure-pipelines/templates/deploy.yml
+++ b/azure-pipelines/templates/deploy.yml
@@ -29,9 +29,9 @@ stages:
         pathToVersionJson: version.json
         semverVersion: v1 # still needed?
 
-    - task: NuGetToolInstaller@1
+    - task: UseDotNet@2
       inputs:
-        versionSpec: 5.x
+        version: 6.0.x
 
     - task: NuGetAuthenticate@0
 
