--- a/azure-pipelines/templates/stages/deploy.yml
+++ b/azure-pipelines/templates/stages/deploy.yml
@@ -5,29 +5,35 @@ parameters:
 
 stages:
 - stage: Deploy
+
   jobs:
   - job: Deploy
+
     strategy:
       matrix:
         win-x64:
           vmImage: windows-latest
           target: win-x64
+
         win-x86:
           vmImage: windows-latest
           target: win-x86
+
         linux-x64:
           vmImage: ubuntu-latest
           target: linux-x64
+
         osx-x64:
           vmImage: macos-latest
           target: osx-x64
+
     pool:
       vmImage: $(vmImage)
+
     steps:
     - template: ../restore.yml
-
-    # - pwsh: dotnet build -c ${{ parameters.config }}
-    #   displayName: Build
+      parameters:
+        config: ${{ parameters.config }}
 
     - pwsh: dotnet publish -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true
       displayName: Publish
