--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -5,15 +5,18 @@ parameters:
 
 stages:
 - stage: Test
+
   pool:
     vmImage: windows-latest
+
   jobs:
   - job: Test
+
     steps:
     - template: ../restore.yml
-
+s
     - pwsh: dotnet build -c ${{ parameters.config }}
       displayName: Build
   
     - pwsh: dotnet test -c ${{ parameters.config }}
-      displayName: Build
+      displayName: Test
