--- a/src/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher.csproj
@@ -25,5 +25,6 @@
 		<PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
     <PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
     <PackageReference Include="System.CommandLine.Hosting" Version="0.3.0-alpha.21216.1" />
+		<PackageReference Include="McMaster.NETCore.Plugins" Version="1.4.0" />
   </ItemGroup>
 </Project>
