--- a/src/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher.csproj
@@ -13,9 +13,9 @@
   <ItemGroup>
     <PackageReference Include="fiskaltrust.Middleware.Abstractions" Version="1.3.3" />
     <PackageReference Include="fiskaltrust.storage.serialization" Version="1.3.1" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.0.0" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.0.0" />
-    <PackageReference Include="fiskaltrust.interface" Version="1.3.1" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="2.0.0-alpha1" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="2.0.0-alpha1" />
+    <PackageReference Include="fiskaltrust.interface" Version="2.0.0-alpha1" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
