--- a/azure-pipelines/templates/stages/deploy.yml
+++ b/azure-pipelines/templates/stages/deploy.yml
@@ -35,7 +35,7 @@ stages:
       parameters:
         config: ${{ parameters.config }}
 
-    - pwsh: dotnet publish -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true
+    - pwsh: dotnet publish -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true -p:EnableCompressionInSingleFile=true
       displayName: Publish
 
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
