--- a/src/fiskaltrust.Launcher/ClientApp/package.json
+++ b/src/fiskaltrust.Launcher/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_new_app",
+  "name": "fiskaltrust-launcher",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,23 +15,24 @@
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0",
     "rimraf": "^2.6.2",
-    "web-vitals": "^0.2.4",                
-    "workbox-background-sync": "^5.1.3",   
-    "workbox-broadcast-update": "^5.1.3",  
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
-    "workbox-core": "^5.1.3",              
-    "workbox-expiration": "^5.1.3",        
-    "workbox-google-analytics": "^5.1.3",  
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-google-analytics": "^5.1.3",
     "workbox-navigation-preload": "^5.1.3",
-    "workbox-precaching": "^5.1.3",        
-    "workbox-range-requests": "^5.1.3",    
-    "workbox-routing": "^5.1.3",           
-    "workbox-strategies": "^5.1.3",        
+    "workbox-precaching": "^5.1.3",
+    "workbox-range-requests": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^4.1.1",
     "eslint": "^7.25.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.7.2",
@@ -42,9 +43,10 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-"prestart": "node aspnetcore-https && node aspnetcore-react",
+    "prestart": "node aspnetcore-https && node aspnetcore-react",
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "dotenv -e .env.development react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
