--- a/azure-pipelines/fiskaltrust.Launcher.yml
+++ b/azure-pipelines/fiskaltrust.Launcher.yml
@@ -18,6 +18,9 @@ stages:
 
   - template: templates/stages/deploy.yml
     parameters:
+      projects:
+        - ./src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+        - ./src/fiskaltrust.LauncherUpdater/fiskaltrust.LauncherUpdater.csproj
       ${{ if startsWith(variables.branch, 'refs/tags/v')}}:
         config: release
       ${{ else }}:
