--- a/azure-pipelines/templates/stages/deploy.yml
+++ b/azure-pipelines/templates/stages/deploy.yml
@@ -2,6 +2,8 @@ parameters:
 - name: config
   type: string
   default: debug
+- name: projects
+  type: object
 
 stages:
 - stage: Deploy
@@ -35,8 +37,9 @@ stages:
       parameters:
         config: ${{ parameters.config }}
 
-    - pwsh: dotnet publish -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true -p:EnableCompressionInSingleFile=true
-      displayName: Publish
+    - ${{ each project in parameters.projects }}:
+      - pwsh: dotnet publish ${{ project }} -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true -p:EnableCompressionInSingleFile=true
+        displayName: Publish
 
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
       artifact: drop-$(target)
