--- a/azure-pipelines/templates/stages/test.yml
+++ b/azure-pipelines/templates/stages/test.yml
@@ -15,8 +15,8 @@ stages:
     steps:
     - template: ../restore.yml
 
-    - pwsh: dotnet build -c ${{ parameters.config }}
+    - pwsh: dotnet build -c ${{ parameters.config }} --self-contained false
       displayName: Build
   
-    - pwsh: dotnet test -c ${{ parameters.config }}
+    - pwsh: dotnet test -c ${{ parameters.config }} --self-contained false
       displayName: Test
