--- a/azure-pipelines/templates/stages/deploy.yml
+++ b/azure-pipelines/templates/stages/deploy.yml
@@ -45,7 +45,9 @@ stages:
       artifact: drop-$(target)
 
     - ${{ each project in parameters.projects }}:
-      - pwsh: Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
+      - pwsh: |
+          New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/
+          Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
 
     - pwsh: |
         $version = Get-Content .\version.json | ConvertFrom-Json | Select-Object -ExpandProperty version
