--- a/azure-pipelines/templates/stages/deploy.yml
+++ b/azure-pipelines/templates/stages/deploy.yml
@@ -44,9 +44,10 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
       artifact: drop-$(target)
 
+    - pwsh: New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/
+
     - ${{ each project in parameters.projects }}:
       - pwsh: |
-          New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/
           Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
 
     - pwsh: |
