use source generation for serialization

--- a/src/fiskaltrust.LauncherUpdater/fiskaltrust.LauncherUpdater.csproj
+++ b/src/fiskaltrust.LauncherUpdater/fiskaltrust.LauncherUpdater.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <PublishReadyToRun>true</PublishReadyToRun>
     <PublishSingleFile>true</PublishSingleFile>
-    <!-- <PublishTrimmed>true</PublishTrimmed> -->
+    <PublishTrimmed>true</PublishTrimmed>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
