--- a/azure-pipelines/templates/stages/deploy.yml
+++ b/azure-pipelines/templates/stages/deploy.yml
@@ -7,8 +7,6 @@ parameters:
 
 stages:
 - stage: Deploy
-  pool:
-    vmImage: ubuntu-latest
 
   jobs:
   - job: Deploy
@@ -40,7 +38,9 @@ stages:
         config: ${{ parameters.config }}
 
     - ${{ each project in parameters.projects }}:
-      - pwsh: dotnet publish ./src/${{ project }}/${{ project }}.csproj -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true /p:EnableCompressionInSingleFile=true /p:DebugType=None /p:DebugSymbols=false /p:GenerateRuntimeConfigurationFiles=false
+      - pwsh: |
+          mv ./Directory.build.props ./Directory.Build.props
+          dotnet publish ./src/${{ project }}/${{ project }}.csproj -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true /p:EnableCompressionInSingleFile=true /p:DebugType=None /p:DebugSymbols=false /p:GenerateRuntimeConfigurationFiles=false
         displayName: Publish
 
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
@@ -58,9 +58,13 @@ stages:
         
 
     - pwsh: |
-        $version = (Select-Xml -Path ./Directory.build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
+        $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
 
-        Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher.$version.zip
+        if("$(vmImage)" -eq "windows-latest") {
+          Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher.$version.zip
+        } else {
+          bash -c "zip -r $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher.$version.zip $(Build.ArtifactStagingDirectory)/raw-$(target)/""
+        }
 
         $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher.$version.zip -Algorithm SHA256
         $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
