--- a/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
+++ b/src/fiskaltrust.Launcher/fiskaltrust.Launcher.csproj
@@ -13,8 +13,8 @@
   <ItemGroup>
     <PackageReference Include="fiskaltrust.Middleware.Abstractions" Version="1.3.3" />
     <PackageReference Include="fiskaltrust.storage.serialization" Version="2.0.0-alpha1-22020-50210" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="2.0.0-alpha2" />
-    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="2.0.0-alpha2" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Grpc" Version="1.3.3" />
+    <PackageReference Include="fiskaltrust.Middleware.Interface.Client.Http" Version="1.3.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
     <PackageReference Include="Serilog.Formatting.Compact.Reader" Version="1.0.5" />
